指摘事項の修正、ログイン済みでも割引情報が経路に反映されない不具合の修正